<resources>

    <!--_____________________ GENERAL _____________________-->

    <!-- General setting -->
    <string name="app_name">Smart GM</string>
    <string name="message_soon">This will coming soon</string>

    <!-- Title of the functionnality provide by the app-->
    <string name="func_universe_title">Universe</string>
    <string name="func_game_title">Game</string>
    <string name="func_dice_title">Dice</string>
    <string name="func_table_title">Table</string>
    <string name="func_wiki_title">Wiki</string>
    <string name="func_timeline_title">Timeline</string>
    <string name="func_model_title">Model</string>
    <string name="func_character_title">Character</string>
    <string name="func_statistic_title">Statistic</string>
    <string name="func_inventory_title">Inventory</string>

    <!-- Title of the buttons -->
    <string name="button_ok">Ok</string>
    <string name="button_edit">Edit</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_reload">Reload</string>
    <string name="button_close">Close</string>
    <string name="button_roll">Roll</string>
    <string name="button_up">+</string>
    <string name="button_down">-</string>
    <string name="button_close_anyway">Close anyway</string>

    <!--_____________________ MENU _____________________-->


    <!-- menu activity with description edition page -->
    <string name="menu_activity_edition_description">Description</string>


    <!--_____________________ ADAPTER _____________________-->

    <!-- Text in the dice adapter -->
    <string name="adapter_dice_suffix">faces</string>
    <string name="adapter_dice_prefix">Roll on</string>
    <!-- Text in the table adapter -->
    <string name="adapter_table_error_title">No item</string>
    <string name="adapter_table_error_content">Table is empty !</string>

    <!--_____________________ FRAGMENT _____________________-->

    <!-- WIKI FRAGMENT -->
    <string name="frag_wiki_content_dummy">
        #Example\n
        This is a presentation example display because this field is empty.\n

        \n##Edition mode\n
        You can turn on/off the edition mode with one button in the action bar.
        You have to found it by yourself !\n

        \n##Syntax\n
        Use the markdown for the pagination, it\'s easy !\n\n

        You can make list :\n\n
        \n- item1
        \n- item2
        \n\nAnd a lot of other fun stuff !
    </string>
    <!-- menu fragment wiki page -->
    <string name="menu_frag_wiki_page_edit">Toggle edition</string>

    <!--_____________________ ACTIVITY _____________________-->

    <!-- WELCOME ACTIVITY -->
    <string name="act_welcome_label">Touch the screen</string>

    <!-- HUB ACTIVITY -->
    <string name="title_activity_hub">Hub</string>
    <string name="act_hub_menu_select_game">Select game</string>
    <string name="act_hub_menu_data_edition">Data edition</string>
    <string name="act_hub_menu_setting">Settings</string>

    <!-- EDITION_LIST ACTIVITY -->
    <string name="title_activity_edition_list">Edition</string>
    <string name="act_edition_list_menu_add">Add item</string>
    <string name="act_edition_list_drawer_title">Data type</string>
    <string name="act_edition_popup_remove_title">Confirmation</string>
    <string name="act_edition_popup_remove_content">Do you really want to delete this item ?</string>
    <string name="act_edition_popup_cascade_title">WARNING</string>
    <string name="act_edition_popup_cascade_content">If you remove this item, all the item linked with it will also be delete.\n\nDo you really want to delete this item ?</string>

    <!-- UNIVERSE EDITION ACTIVITY -->
    <string name="title_universe_edition">Universe setting</string>
    <string name="act_universe_edition_name_label">Name</string>

    <!-- GAME EDITION ACTIVITY -->
    <string name="title_game_edition">Game setting</string>
    <string name="act_game_edition_name_label">Name</string>
    <string name="act_game_edition_universe_label">Universe</string>
    <string name="act_game_edition_popup_cascade_title">WARNING</string>
    <string name="act_game_edition_popup_cascade_content">No universe set. This game will not be save.\n\nDo you really want to discare changes ?</string>
    <string name="menu_game_edition_description">Description</string>

    <!-- TABLE EDITION ACTIVITY -->
    <string name="title_table_edition">Game setting</string>
    <string name="act_table_edition_name_label">Name</string>
    <string name="act_table_edition_universe_label">Universe</string>
    <string name="act_table_edition_item_label">Content</string>
    <string name="menu_table_edition_description">Description</string>

    <!-- WIKI EDITION ACTIVITY -->
    <string name="title_wiki_edition">Wiki setting</string>
    <string name="act_wiki_edition_name_label">Name</string>
    <string name="act_wiki_edition_universe_label">Universe</string>
    <string name="act_wiki_edition_content_label">Content</string>
    <string name="menu_wiki_edition_full_screen_description">Full screen</string>

    <!-- DICE EDITION ACTIVITY -->
    <string name="title_dice_edition">Dice setting</string>
    <string name="act_dice_edition_face_label">Number of faces</string>
    <string name="act_dice_edition_dice_label">Number of dices</string>
    <string name="act_dice_edition_universe_label">Universe</string>

    <!--_____________________ ACTIVITY NO PROPER _____________________-->
    <!-- MAIN ACTIVITY -->
    <string name="activity_main_dialog_edit_delete_title">Action on item</string>
    <!-- Title of the menu item -->
    <string name="activity_main_action_settings">Settings</string>
    <string name="activity_main_action_game_selection">Select a game</string>
    <string name="activity_main_action_editions">Edit data</string>
    <string name="activity_main_action_describe">Describe</string>
    <!-- About the drawer -->
    <string name="drawer_universe_separator">Universe</string>
    <string name="drawer_game_separator">Game</string>
    <string name="drawer_character_separator">Character</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Activity about description -->
    <string name="activity_description_toogle_on">Enter in display mode</string>
    <string name="activity_description_toogle_off">Enter in edit mode</string>
    <!-- Activity about wiki page -->
    <string name="activity_wikipage_toogle_on">Enter in display mode</string>
    <string name="activity_wikipage_toogle_off">Enter in edit mode</string>
    <string name="activity_wikipage_setting_name">Name</string>
    <string name="activity_wikipage_setting_description">Description</string>
    <!-- Activity about universe -->
    <!-- Activity about game -->
    <string name="activity_game_setting_main_title">Game setting</string>
    <string name="activity_game_setting_name">Name</string>
    <string name="activity_game_setting_short_note">Short note</string>
    <string name="activity_game_setting_universe">Universe</string>
    <string name="activity_game_setting_description">Description (wikipage)</string>
    <!-- Activity about dice -->
    <string name="activity_dice_setting_main_title">Dice setting</string>
    <string name="activity_dice_setting_nbface_title">Number of faces</string>
    <!-- Activity about table -->
    <string name="activity_table_setting_main_title">Table setting</string>
    <string name="activity_table_setting_name_title">Name</string>
    <string name="activity_table_setting_items_title">Items</string>
    <string name="activity_table_setting_items_name">Name</string>
    <string name="activity_table_setting_items_weight">Weight</string>
    <string name="activity_table_setting_dialog_edit_delete_title">Action on item</string>
    <string name="activity_table_setting_dialog_set_name_title">Set item name</string>
    <string name="activity_table_setting_dialog_set_weight_title">Set item weight</string>
    <string name="activity_table_setting_item_default_name">No set</string>
    <!-- Activity about entity -->
    <string name="activity_entity_setting_main_title">Entity edition</string>
    <string name="activity_entity_setting_name_title">Name</string>
    <string name="activity_entity_setting_values_title">Values</string>
    <string name="activity_entity_setting_values_name">Name</string>
    <string name="activity_entity_setting_values_content">Value</string>
    <string name="activity_entity_setting_dialog_edit_delete_title">Action on item</string>
    <string name="activity_entity_setting_dialog_set_name_title">Set item name</string>
    <string name="activity_entity_setting_dialog_set_value_title">Set item value</string>
    <string name="activity_entity_setting_item_default_name">No set</string>
    <!-- Activity about character -->
    <string name="activity_character_setting_main_title">Character setting</string>
    <string name="activity_character_setting_name">Name</string>
    <!-- Activity about statistic -->
    <string name="activity_statistic_setting_main_title">Statistic setting</string>
    <string name="activity_statistic_setting_name">Name</string>
    <string name="activity_statistic_setting_min">Minimum value</string>
    <string name="activity_statistic_setting_max">Maximum value</string>
    <string name="activity_statistic_setting_current">Current value</string>
    <!-- Activity about timeline -->
    <string name="activity_timeline_setting_main_title">Time line setting</string>
    <string name="activity_timeline_setting_name">Name</string>
    <string name="activity_timeline_setting_date">Date</string>
    <string name="activity_timeline_setting_description">Description (wikipage)</string>

    <!-- Activity about numberpicker -->
    <string name="components_numberpicker_minimal_value">Minimal value is</string>
    <string name="components_numberpicker_maximal_value">Maximal value is</string>
    <string name="components_numberpicker_numeric_only">Only numeric value is allowed</string>

    <string name="add_game_dialog_title">Add Game</string>
    <string name="add_game_dialog_description">Enter the name of the game</string>
    <string name="title_activity_wiki_edition">WikiEditionActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_description_display">Description</string>


</resources>
