<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_universe"
            android:icon="@drawable/planet"
            android:title="@string/func_universe_title" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/game"
            android:title="@string/func_game_title" />
        <item
            android:id="@+id/nav_dice"
            android:icon="@drawable/dice"
            android:title="@string/func_dice_title" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/question"
            android:title="@string/func_table_title" />
        <item
            android:id="@+id/nav_wiki"
            android:icon="@drawable/sheet"
            android:title="@string/func_wiki_title" />
        <item
            android:id="@+id/nav_model"
            android:icon="@drawable/sheet"
            android:title="@string/func_model_title" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/timeline"
            android:title="@string/func_timeline_title" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistic"
            android:title="@string/func_statistic_title" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/func_inventory_title" />
    </group>

</menu>
