<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="ch.arkeine.smartgm.view.WikiEditionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_wikipage_setting_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_wikipage_setting_description" />

    <ToggleButton
        android:id="@+id/switch_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/activity_description_toogle_on"
        android:textOff="@string/activity_description_toogle_off"/>

    <WebView
        android:id="@+id/display_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:padding="10dp" />

</LinearLayout>
