<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ch.arkeine.smartgm.view.StatisticSettingActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_statistic_setting_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activity_statistic_setting_min"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <ch.arkeine.smartgm.component.NumberPickerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:maximumValue="10000"
        app:minimumValue="-10000"
        android:id="@+id/minimum_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activity_statistic_setting_max"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <ch.arkeine.smartgm.component.NumberPickerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:maximumValue="10000"
        app:minimumValue="-10000"
        android:id="@+id/maximum_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activity_statistic_setting_current"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <ch.arkeine.smartgm.component.NumberPickerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:maximumValue="10000"
        app:minimumValue="-10000"
        android:id="@+id/current_value"/>

</LinearLayout>
