<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.editiondb.GameEditionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"  />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_dice_edition_face_label"/>

            <ch.arkeine.smartgm.view.component.NumberPicker
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:orientation="horizontal"
                app:minimumValue="2"
                app:maximumValue="100"
                app:currentValue="20"
                android:id="@+id/picker_face">
            </ch.arkeine.smartgm.view.component.NumberPicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_dice_edition_dice_label"
                android:layout_marginTop="10dp"/>

            <ch.arkeine.smartgm.view.component.NumberPicker
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:orientation="horizontal"
                app:minimumValue="1"
                app:maximumValue="5"
                app:currentValue="1"
                android:id="@+id/picker_dice">
            </ch.arkeine.smartgm.view.component.NumberPicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_dice_edition_universe_label"
                android:layout_marginTop="10dp"/>

            <fragment
                android:name="ch.arkeine.smartgm.view.fragment.ForeignKeySelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_foreign_key_selector"
                android:id="@+id/selector"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/linearLayout"
                android:layout_alignStart="@+id/linearLayout"
                android:layout_weight="3.75" />
        </LinearLayout>

        <fragment
            android:name="ch.arkeine.smartgm.view.fragment.DataEditionButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_data_edition_buttons"
            android:id="@+id/buttons"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>